Changing dark mode color to avoid green screen look

--- a/public/dark.css
+++ b/public/dark.css
@@ -1,7 +1,7 @@
 :root {
   --body-color: #121212;
   --secondary-body-color: #1f1f1f;
-  --primary-color: rgb(0, 226, 90);
+  --primary-color: rgb(0, 165, 255);
   --main-text-color: rgba(255, 255, 255, .87);
   --alt-text-color: rgb(41, 41, 41);
   --secondary-text-color: rgba(255, 255, 255, .6);
